More tweaks on sending html format email notification.

--- a/src/main/resources/Server_notification_email_template.html
+++ b/src/main/resources/Server_notification_email_template.html
@@ -771,9 +771,10 @@
                         <td valign="top" class="mcnTextContent" style="padding: 9px 18px;color: #222222;font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;font-size: 14px;font-weight: normal;line-height: 200%;text-align: justify;">
                         
                             <br>
-<span style="font-size:14px"><span style="font-family:trebuchet ms,lucida grande,lucida sans unicode,lucida sans,tahoma,sans-serif"><span>Dear &lt;_First name Last name_&gt;<br>
+<span style="font-size:14px"><span style="font-family:trebuchet ms,lucida grande,lucida sans unicode,lucida sans,tahoma,sans-serif">
+<span>
 %%____%%
-&nbsp;<br>
+&nbsp;<br><br>
 <strong>This is an automated message</strong>, please do not respond to this email. If you need help, contact us by emailing:&nbsp;</span><a href="mailto:support@ndexbio.org"><span style="color:#3366ff">support@ndexbio.org</span></a><br>
 <span>&nbsp;<br>
 Best Regards,<br>
