Added new v3 admin function.

--- a/src/main/resources/Server_notification_email_template.html
+++ b/src/main/resources/Server_notification_email_template.html
@@ -833,7 +833,7 @@ The NDEx team</span></span></span></div>
                         <td valign="top" class="mcnTextContent" style="padding: 0px 18px 9px; text-align: center;">
                         
                             <h4 class="null" style="text-align: center;"><br>
-<span class="mc-toc-title"><span style="font-size:12px">Copyright © 2013-2018, The Regents of the University of California, The Cytoscape Consortium.<br>
+<span class="mc-toc-title"><span style="font-size:12px">Copyright © 2013 The Regents of the University of California, The Cytoscape Consortium.<br>
 All rights reserved. &nbsp;<a href="https://home.ndexbio.org/disclaimer-license/">Terms &amp; Conditions</a></span></span></h4>
 
                         </td>
